--- a/index.html
+++ b/index.html
@@ -1,158 +1,157 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Digital Portfolio - Itzel Serrano</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Digital Portfolio - Itzel Serrano</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Digital Portfolio</h1>
-        <h2>Itzel Serrano - ID: 1-741-393</h2>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#cover">Cover Page</a></li>
-            <li><a href="#introduction">Introduction</a></li>
-            <li><a href="#contents">Lessons</a></li>
-            <li><a href="#conclusion">Conclusion</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section id="cover">
-            <h3>Cover Page</h3>
-            <p><strong>Institution:</strong> UDELAS</p>
-            <p><strong>Bachelor Degree:</strong> Informatics Bachelor Degree</p>
-            <p><strong>Title:</strong> DIGITAL PORTFOLIO FINAL PROJECT</p>
-            <p><strong>Student:</strong> Itzel Serrano</p>
-            <p><strong>Date:</strong> July 2nd, 2025</p>
-        </section>
-        <section id="introduction">
-            <h3>Introduction</h3>
-            <p>This digital portfolio showcases the lessons studied during the semester, integrating grammar, vocabulary, and interactive activities designed to improve English proficiency. Each section contains summaries and personal reflections. The objective is to present the learning outcomes and their relevance for the future.</p>
-        </section>
-        <section id="contents">
-            <h3>Lessons</h3>
-            <p>This section will include 11 lessons, each one explained with images, grammar points, vocabulary and personal reflections.</p>
-            <!-- Placeholder for lessons -->
-            
-<section class="lesson" id="lesson1">
-    <h4>Lesson 1: Introducing Yourself</h4>
-    <img src="https://cdn-icons-png.flaticon.com/512/2922/2922510.png" alt="Icon" style="width:70px;">
-    <p><strong>Objective:</strong> Practice self-introductions using simple sentences.</p>
-    <p>We learned to talk about ourselves, including name, age, birthday, favorite subjects, and hobbies.</p>
-    <p><strong>Grammar Focus:</strong> Simple present tense</p>
-    <p><strong>Reflection:</strong> This helped me gain confidence when speaking about myself. I now know how to describe who I am.</p>
+<header class="hero" style="background-image:url('https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?auto=format&fit=crop&w=1200&q=80');">
+  <div class="overlay">
+    <h1>Itzel Serrano</h1>
+    <p>Informatics Bachelor Degree • UDELAS</p>
+    <span>ID: 1-741-393</span>
+  </div>
+</header>
+
+<section class="intro">
+  <h2>Introduction</h2>
+  <p>This digital portfolio showcases the lessons studied during the semester, integrating grammar, vocabulary, and interactive activities designed to improve English proficiency. Each section contains summaries and personal reflections, aiming to present the learning outcomes and their relevance for the future.</p>
 </section>
 
-<section class="lesson" id="lesson2">
-    <h4>Lesson 2: Technology Uses</h4>
-    <img src="https://cdn-icons-png.flaticon.com/512/2702/2702602.png" alt="Icon" style="width:70px;">
-    <p><strong>Objective:</strong> Write affirmative and negative sentences using simple present.</p>
-    <p>We practiced how to talk about daily technology habits using present tense.</p>
-    <p><strong>Grammar Focus:</strong> Simple present with 'do/does' and third person rules.</p>
-    <p><strong>Reflection:</strong> I improved writing structured sentences and expressing habits clearly.</p>
+<section class="lessons">
+  <h2>Lessons</h2>
+
+  <div class="lesson">
+    <img src="https://images.unsplash.com/photo-1521737711867-e3b97375f902?auto=format&fit=crop&w=900&q=60" alt="Lesson 1: Introducing Yourself">
+    <div class="lesson-text">
+      <h3>Lesson 1: Introducing Yourself</h3>
+      <p><strong>Objective:</strong> Practice self‑introductions using simple sentences.</p>
+      <p>We learned to talk about ourselves, including name, age, birthday, favorite subjects, and hobbies.</p>
+      <p><strong>Reflection:</strong> This helped me gain confidence when speaking about myself. I now know how to describe who I am.</p>
+    </div>
+  </div>
+
+  <div class="lesson">
+    <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=900&q=60" alt="Lesson 2: Technology Uses">
+    <div class="lesson-text">
+      <h3>Lesson 2: Technology Uses</h3>
+      <p><strong>Objective:</strong> Write affirmative and negative sentences using simple present.</p>
+      <p>We practiced how to talk about daily technology habits using present tense.</p>
+      <p><strong>Reflection:</strong> I improved writing structured sentences and expressing habits clearly.</p>
+    </div>
+  </div>
+
+  <div class="lesson">
+    <img src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8?auto=format&fit=crop&w=900&q=60" alt="Lesson 3: Parts of the Computer">
+    <div class="lesson-text">
+      <h3>Lesson 3: Parts of the Computer</h3>
+      <p><strong>Objective:</strong> Identify basic hardware parts of a computer and their functions.</p>
+      <p>We labeled the monitor, CPU, mouse, keyboard, printer, hard drive, and CD drive.</p>
+      <p><strong>Reflection:</strong> I can now describe each part of the computer and explain its purpose.</p>
+    </div>
+  </div>
+
+  <div class="lesson">
+    <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=900&q=60" alt="Lesson 4: Action Verbs in Computing">
+    <div class="lesson-text">
+      <h3>Lesson 4: Action Verbs in Computing</h3>
+      <p><strong>Objective:</strong> Use action verbs related to computing in sentences.</p>
+      <p>We learned verbs like click, drag, install, run, update, type, etc.</p>
+      <p><strong>Reflection:</strong> I can give and follow technical instructions more clearly now.</p>
+    </div>
+  </div>
+
+  <div class="lesson">
+    <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=900&q=60" alt="Lesson 5: Professional Email">
+    <div class="lesson-text">
+      <h3>Lesson 5: Professional Email</h3>
+      <p><strong>Objective:</strong> Learn the structure of a formal email and appropriate expressions.</p>
+      <p>We wrote emails using greetings, body paragraphs, and formal closings.</p>
+      <p><strong>Reflection:</strong> I now know how to write professional emails with correct formatting and tone.</p>
+    </div>
+  </div>
+
+  <div class="lesson">
+    <img src="https://images.unsplash.com/photo-1535223289827-42f1e9919769?auto=format&fit=crop&w=900&q=60" alt="Lesson 6: Internet Safety">
+    <div class="lesson-text">
+      <h3>Lesson 6: Internet Safety</h3>
+      <p><strong>Objective:</strong> Understand online threats and learn how to stay safe online.</p>
+      <p>We discussed risks such as phishing and created online safety posters.</p>
+      <p><strong>Reflection:</strong> I learned how to protect my personal data and behave responsibly on the internet.</p>
+    </div>
+  </div>
+
+  <div class="lesson">
+    <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=900&q=60" alt="Lesson 7: Types of Computers">
+    <div class="lesson-text">
+      <h3>Lesson 7: Types of Computers</h3>
+      <p><strong>Objective:</strong> Compare desktops, laptops, tablets, and smartphones.</p>
+      <p>We described the function and portability of each device type.</p>
+      <p><strong>Reflection:</strong> I can identify which computer type suits different needs and situations.</p>
+    </div>
+  </div>
+
+  <div class="lesson">
+    <img src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?auto=format&fit=crop&w=900&q=60" alt="Lesson 8: Computers in the Past">
+    <div class="lesson-text">
+      <h3>Lesson 8: Computers in the Past</h3>
+      <p><strong>Objective:</strong> Discuss how computers have evolved over time.</p>
+      <p>We explored the history of computing and major milestones.</p>
+      <p><strong>Reflection:</strong> I appreciate how technology has progressed and made life easier.</p>
+    </div>
+  </div>
+
+  <div class="lesson">
+    <img src="https://images.unsplash.com/photo-1512218168356-bb3be21a1ff4?auto=format&fit=crop&w=900&q=60" alt="Lesson 9: Questions in Past Tense">
+    <div class="lesson-text">
+      <h3>Lesson 9: Questions in Past Tense</h3>
+      <p><strong>Objective:</strong> Form and answer WH‑ questions in past tense.</p>
+      <p>We practiced questions like 'What did you do yesterday?'</p>
+      <p><strong>Reflection:</strong> Now I can ask and answer about past events clearly.</p>
+    </div>
+  </div>
+
+  <div class="lesson">
+    <img src="https://images.unsplash.com/photo-1505673542671-34a35fa6b44c?auto=format&fit=crop&w=900&q=60" alt="Lesson 10: The Future and Robotics">
+    <div class="lesson-text">
+      <h3>Lesson 10: The Future and Robotics</h3>
+      <p><strong>Objective:</strong> Explore how robotics may impact future life.</p>
+      <p>We discussed benefits and challenges of using robots.</p>
+      <p><strong>Reflection:</strong> I learned that robots will help in medicine, education, and daily tasks.</p>
+    </div>
+  </div>
+
+  <div class="lesson">
+    <img src="https://images.unsplash.com/photo-1564869735109-6a14a0aaf7e6?auto=format&fit=crop&w=900&q=60" alt="Lesson 11: Environmental Solutions">
+    <div class="lesson-text">
+      <h3>Lesson 11: Environmental Solutions</h3>
+      <p><strong>Objective:</strong> Propose solutions to environmental problems.</p>
+      <p>We talked about recycling, pollution, and saving energy.</p>
+      <p><strong>Reflection:</strong> I now value small actions to protect the planet.</p>
+    </div>
+  </div>
+
+  <div class="lesson">
+    <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=900&q=60" alt="Lesson 12: Reflection and Review">
+    <div class="lesson-text">
+      <h3>Lesson 12: Reflection and Review</h3>
+      <p><strong>Objective:</strong> Review course contents and share reflections.</p>
+      <p>We reviewed vocabulary, grammar, and all previous topics.</p>
+      <p><strong>Reflection:</strong> This helped me connect all lessons and recognize my progress.</p>
+    </div>
+  </div>
+
 </section>
 
-<section class="lesson" id="lesson3">
-    <h4>Lesson 3: Parts of the Computer</h4>
-    <img src="https://cdn-icons-png.flaticon.com/512/843/843324.png" alt="Icon" style="width:70px;">
-    <p><strong>Objective:</strong> Identify basic hardware parts of a computer and their functions.</p>
-    <p>We labeled the monitor, CPU, mouse, keyboard, printer, hard drive, and CD drive.</p>
-    <p><strong>Grammar Focus:</strong> Vocabulary building</p>
-    <p><strong>Reflection:</strong> I can now describe each part of the computer and explain its purpose.</p>
+<section class="conclusion">
+  <h2>Conclusion</h2>
+  <p>Throughout this course, I have strengthened my English communication skills and broadened my understanding of technology and its impact. This portfolio reflects my journey and growth over the semester.</p>
 </section>
 
-<section class="lesson" id="lesson4">
-    <h4>Lesson 4: Action Verbs in Computing</h4>
-    <img src="https://cdn-icons-png.flaticon.com/512/906/906175.png" alt="Icon" style="width:70px;">
-    <p><strong>Objective:</strong> Use action verbs related to computing in sentences.</p>
-    <p>We learned verbs like click, drag, install, run, update, type, etc.</p>
-    <p><strong>Grammar Focus:</strong> Simple present tense</p>
-    <p><strong>Reflection:</strong> I can give and follow technical instructions more clearly now.</p>
-</section>
-
-<section class="lesson" id="lesson6">
-    <h4>Lesson 6: Writing Technical Emails</h4>
-    <img src="https://cdn-icons-png.flaticon.com/512/561/561127.png" alt="Icon" style="width:70px;">
-    <p><strong>Objective:</strong> Write formal emails to report issues or make requests.</p>
-    <p>We followed a structure using salutation, body, closing, and signature.</p>
-    <p><strong>Grammar Focus:</strong> Formal writing structure</p>
-    <p><strong>Reflection:</strong> This will help me communicate clearly in professional settings.</p>
-</section>
-
-<section class="lesson" id="lesson7">
-    <h4>Lesson 7: Types of Computers</h4>
-    <img src="https://cdn-icons-png.flaticon.com/512/1055/1055646.png" alt="Icon" style="width:70px;">
-    <p><strong>Objective:</strong> Describe different types of computers, including PCs, servers, and embedded systems.</p>
-    <p>We explored how computers evolved from large machines to small embedded systems.</p>
-    <p><strong>Grammar Focus:</strong> Simple past tense</p>
-    <p><strong>Reflection:</strong> I can compare computers from the past and the present.</p>
-</section>
-
-<section class="lesson" id="lesson8">
-    <h4>Lesson 8: Computers in the Past</h4>
-    <img src="https://cdn-icons-png.flaticon.com/512/843/843292.png" alt="Icon" style="width:70px;">
-    <p><strong>Objective:</strong> Answer questions in past tense about historical computing.</p>
-    <p>We learned how computers looked and were used decades ago.</p>
-    <p><strong>Grammar Focus:</strong> Simple past</p>
-    <p><strong>Reflection:</strong> It was interesting to see how much technology has changed.</p>
-</section>
-
-<section class="lesson" id="lesson9">
-    <h4>Lesson 9: Questions in Past Tense</h4>
-    <img src="https://cdn-icons-png.flaticon.com/512/2592/2592171.png" alt="Icon" style="width:70px;">
-    <p><strong>Objective:</strong> Practice forming and answering questions in past tense.</p>
-    <p>We answered comprehension questions from historical texts.</p>
-    <p><strong>Grammar Focus:</strong> Simple past questions</p>
-    <p><strong>Reflection:</strong> This helped me practice reading and expressing ideas in past tense.</p>
-</section>
-
-<section class="lesson" id="lesson10">
-    <h4>Lesson 10: The Future and Robotics</h4>
-    <img src="https://cdn-icons-png.flaticon.com/512/1688/1688529.png" alt="Icon" style="width:70px;">
-    <p><strong>Objective:</strong> Use will, might, and going to when discussing technology.</p>
-    <p>We watched a video and made predictions about future technologies.</p>
-    <p><strong>Grammar Focus:</strong> Future tense structures</p>
-    <p><strong>Reflection:</strong> I enjoyed imagining how robots could improve our lives.</p>
-</section>
-
-<section class="lesson" id="lesson12">
-    <h4>Lesson 12: Artificial Intelligence</h4>
-    <img src="https://cdn-icons-png.flaticon.com/512/4407/4407445.png" alt="Icon" style="width:70px;">
-    <p><strong>Objective:</strong> Discuss plans, predictions and commands using 'going to'.</p>
-    <p>We reflected on AI’s role in our future and wrote personal goals.</p>
-    <p><strong>Grammar Focus:</strong> Going to + base verb</p>
-    <p><strong>Reflection:</strong> This topic made me think critically about how I use technology.</p>
-</section>
-
-
-<section class="lesson" id="lesson5">
-    <h4>Lesson 5: Writing a Professional Email</h4>
-    <img src="https://cdn-icons-png.flaticon.com/512/561/561127.png" alt="Email Icon" style="width:80px;">
-    <p><strong>Objective:</strong> Learn the structure and tone of a professional/technical email.</p>
-    <p>In this lesson, we studied how to write a professional email using clear subject lines, greetings, purpose statements, and polite closings.</p>
-    <p><strong>Key Vocabulary:</strong> subject, greeting, purpose, closing, sign-off, formal tone.</p>
-    <blockquote>
-        <strong>Example:</strong>  
-        <br><em>Subject:</em> Informational Interview Request  
-        <br><em>Dear Mr. Smith,</em>  
-        <br>I am writing to inquire about...  
-        <br><em>Sincerely,</em>  
-        <br>Itzel Serrano
-    </blockquote>
-    <p><strong>Reflection:</strong> This lesson taught me the importance of being concise and polite in digital communication. I learned that tone and structure affect how our message is received in professional settings.</p>
-</section>
-
-        </section>
-        <section id="conclusion">
-            <h3>Conclusion</h3>
-            <p>Through this course, I have gained valuable skills in grammar, vocabulary, and digital communication. These skills will support my future academic and professional growth. I recommend incorporating more interactive speaking activities in future lessons.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Itzel Serrano | UDELAS</p>
-    </footer>
+<footer>
+  <p>© 2025 Itzel Serrano – Informatics Bachelor Degree – UDELAS</p>
+</footer>
 </body>
 </html>
