--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="hero" style="background-image:url('https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?auto=format&fit=crop&w=1200&q=80');">
+<header class="hero" style="background-image:url('https://unsplash.com/photos/blue-orange-and-yellow-wallpaper-E8Ufcyxz514');">
   <div class="overlay">
     <h1>Itzel Serrano</h1>
     <p>Informatics Bachelor Degree • UDELAS</p>
