--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="hero" style="background-image:url('https://unsplash.com/photos/blue-orange-and-yellow-wallpaper-E8Ufcyxz514');">
+<header class="hero" style="background-image:url('https://images.unsplash.com/photo-1519710164239-da123dc03ef4?auto=format&fit=crop&w=1200&q=80');">
   <div class="overlay">
     <h1>Itzel Serrano</h1>
     <p>Informatics Bachelor Degree • UDELAS</p>
@@ -21,9 +21,8 @@
 </section>
 
 <section class="lessons">
-  <h2>Lessons</h2>
 
-  <div class="lesson">
+  <div class="lesson ">
     <img src="https://images.unsplash.com/photo-1521737711867-e3b97375f902?auto=format&fit=crop&w=900&q=60" alt="Lesson 1: Introducing Yourself">
     <div class="lesson-text">
       <h3>Lesson 1: Introducing Yourself</h3>
@@ -33,7 +32,7 @@
     </div>
   </div>
 
-  <div class="lesson">
+  <div class="lesson reverse">
     <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=900&q=60" alt="Lesson 2: Technology Uses">
     <div class="lesson-text">
       <h3>Lesson 2: Technology Uses</h3>
@@ -43,7 +42,7 @@
     </div>
   </div>
 
-  <div class="lesson">
+  <div class="lesson ">
     <img src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8?auto=format&fit=crop&w=900&q=60" alt="Lesson 3: Parts of the Computer">
     <div class="lesson-text">
       <h3>Lesson 3: Parts of the Computer</h3>
@@ -53,7 +52,7 @@
     </div>
   </div>
 
-  <div class="lesson">
+  <div class="lesson reverse">
     <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=900&q=60" alt="Lesson 4: Action Verbs in Computing">
     <div class="lesson-text">
       <h3>Lesson 4: Action Verbs in Computing</h3>
@@ -63,7 +62,7 @@
     </div>
   </div>
 
-  <div class="lesson">
+  <div class="lesson ">
     <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=900&q=60" alt="Lesson 5: Professional Email">
     <div class="lesson-text">
       <h3>Lesson 5: Professional Email</h3>
@@ -73,7 +72,7 @@
     </div>
   </div>
 
-  <div class="lesson">
+  <div class="lesson reverse">
     <img src="https://images.unsplash.com/photo-1535223289827-42f1e9919769?auto=format&fit=crop&w=900&q=60" alt="Lesson 6: Internet Safety">
     <div class="lesson-text">
       <h3>Lesson 6: Internet Safety</h3>
@@ -83,7 +82,7 @@
     </div>
   </div>
 
-  <div class="lesson">
+  <div class="lesson ">
     <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=900&q=60" alt="Lesson 7: Types of Computers">
     <div class="lesson-text">
       <h3>Lesson 7: Types of Computers</h3>
@@ -93,7 +92,7 @@
     </div>
   </div>
 
-  <div class="lesson">
+  <div class="lesson reverse">
     <img src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?auto=format&fit=crop&w=900&q=60" alt="Lesson 8: Computers in the Past">
     <div class="lesson-text">
       <h3>Lesson 8: Computers in the Past</h3>
@@ -103,8 +102,8 @@
     </div>
   </div>
 
-  <div class="lesson">
-    <img src="https://images.unsplash.com/photo-1512218168356-bb3be21a1ff4?auto=format&fit=crop&w=900&q=60" alt="Lesson 9: Questions in Past Tense">
+  <div class="lesson ">
+    <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=900&q=60" alt="Lesson 9: Questions in Past Tense">
     <div class="lesson-text">
       <h3>Lesson 9: Questions in Past Tense</h3>
       <p><strong>Objective:</strong> Form and answer WH‑ questions in past tense.</p>
@@ -113,8 +112,8 @@
     </div>
   </div>
 
-  <div class="lesson">
-    <img src="https://images.unsplash.com/photo-1505673542671-34a35fa6b44c?auto=format&fit=crop&w=900&q=60" alt="Lesson 10: The Future and Robotics">
+  <div class="lesson reverse">
+    <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=900&q=60" alt="Lesson 10: The Future and Robotics">
     <div class="lesson-text">
       <h3>Lesson 10: The Future and Robotics</h3>
       <p><strong>Objective:</strong> Explore how robotics may impact future life.</p>
@@ -123,8 +122,8 @@
     </div>
   </div>
 
-  <div class="lesson">
-    <img src="https://images.unsplash.com/photo-1564869735109-6a14a0aaf7e6?auto=format&fit=crop&w=900&q=60" alt="Lesson 11: Environmental Solutions">
+  <div class="lesson ">
+    <img src="https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=900&q=60" alt="Lesson 11: Environmental Solutions">
     <div class="lesson-text">
       <h3>Lesson 11: Environmental Solutions</h3>
       <p><strong>Objective:</strong> Propose solutions to environmental problems.</p>
@@ -133,7 +132,7 @@
     </div>
   </div>
 
-  <div class="lesson">
+  <div class="lesson reverse">
     <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=900&q=60" alt="Lesson 12: Reflection and Review">
     <div class="lesson-text">
       <h3>Lesson 12: Reflection and Review</h3>
