--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<nav class="navbar">
+  <ul class="menu">
+    <li><a href="#introduction">Introduction</a></li>
+    <li class="dropdown"><a href="#lesson1">Lessons ▾</a>
+      <ul class="submenu">
+        <li><a href="#lesson1">Lesson 1</a></li>
+        <li><a href="#lesson2">Lesson 2</a></li>
+        <li><a href="#lesson3">Lesson 3</a></li>
+        <li><a href="#lesson4">Lesson 4</a></li>
+        <li><a href="#lesson5">Lesson 5</a></li>
+        <li><a href="#lesson6">Lesson 6</a></li>
+        <li><a href="#lesson7">Lesson 7</a></li>
+        <li><a href="#lesson8">Lesson 8</a></li>
+        <li><a href="#lesson9">Lesson 9</a></li>
+        <li><a href="#lesson10">Lesson 10</a></li>
+        <li><a href="#lesson11">Lesson 11</a></li>
+        <li><a href="#lesson12">Lesson 12</a></li>
+      </ul>
+    </li>
+    <li><a href="#conclusion">Conclusions</a></li>
+  </ul>
+</nav>
+
+
 <header class="hero" style="background-image:url('https://images.unsplash.com/photo-1519710164239-da123dc03ef4?auto=format&fit=crop&w=1200&q=80');">
   <div class="overlay">
     <h1>Itzel Serrano</h1>
@@ -16,7 +41,7 @@
 </header>
 
 <section class="intro">
-  <h2>Introduction</h2>
+  <h2 id="introduction">Introduction</h2>
   <p>This digital portfolio showcases the lessons studied during the semester, integrating grammar, vocabulary, and interactive activities designed to improve English proficiency. Each section contains summaries and personal reflections, aiming to present the learning outcomes and their relevance for the future.</p>
 </section>
 
@@ -25,7 +50,7 @@
   <div class="lesson ">
     <img src="https://images.unsplash.com/photo-1521737711867-e3b97375f902?auto=format&fit=crop&w=900&q=60" alt="Lesson 1: Introducing Yourself">
     <div class="lesson-text">
-      <h3>Lesson 1: Introducing Yourself</h3>
+      <h3 id="lesson1">Lesson 1: Introducing Yourself</h3>
       <p><strong>Objective:</strong> Practice self‑introductions using simple sentences.</p>
       <p>We learned to talk about ourselves, including name, age, birthday, favorite subjects, and hobbies.</p>
       <p><strong>Reflection:</strong> This helped me gain confidence when speaking about myself. I now know how to describe who I am.</p>
@@ -35,7 +60,7 @@
   <div class="lesson reverse">
     <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=900&q=60" alt="Lesson 2: Technology Uses">
     <div class="lesson-text">
-      <h3>Lesson 2: Technology Uses</h3>
+      <h3 id="lesson2">Lesson 2: Technology Uses</h3>
       <p><strong>Objective:</strong> Write affirmative and negative sentences using simple present.</p>
       <p>We practiced how to talk about daily technology habits using present tense.</p>
       <p><strong>Reflection:</strong> I improved writing structured sentences and expressing habits clearly.</p>
@@ -45,7 +70,7 @@
   <div class="lesson ">
     <img src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8?auto=format&fit=crop&w=900&q=60" alt="Lesson 3: Parts of the Computer">
     <div class="lesson-text">
-      <h3>Lesson 3: Parts of the Computer</h3>
+      <h3 id="lesson3">Lesson 3: Parts of the Computer</h3>
       <p><strong>Objective:</strong> Identify basic hardware parts of a computer and their functions.</p>
       <p>We labeled the monitor, CPU, mouse, keyboard, printer, hard drive, and CD drive.</p>
       <p><strong>Reflection:</strong> I can now describe each part of the computer and explain its purpose.</p>
@@ -55,7 +80,7 @@
   <div class="lesson reverse">
     <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=900&q=60" alt="Lesson 4: Action Verbs in Computing">
     <div class="lesson-text">
-      <h3>Lesson 4: Action Verbs in Computing</h3>
+      <h3 id="lesson4">Lesson 4: Action Verbs in Computing</h3>
       <p><strong>Objective:</strong> Use action verbs related to computing in sentences.</p>
       <p>We learned verbs like click, drag, install, run, update, type, etc.</p>
       <p><strong>Reflection:</strong> I can give and follow technical instructions more clearly now.</p>
@@ -65,7 +90,7 @@
   <div class="lesson ">
     <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=900&q=60" alt="Lesson 5: Professional Email">
     <div class="lesson-text">
-      <h3>Lesson 5: Professional Email</h3>
+      <h3 id="lesson5">Lesson 5: Professional Email</h3>
       <p><strong>Objective:</strong> Learn the structure of a formal email and appropriate expressions.</p>
       <p>We wrote emails using greetings, body paragraphs, and formal closings.</p>
       <p><strong>Reflection:</strong> I now know how to write professional emails with correct formatting and tone.</p>
@@ -75,7 +100,7 @@
   <div class="lesson reverse">
     <img src="https://images.unsplash.com/photo-1535223289827-42f1e9919769?auto=format&fit=crop&w=900&q=60" alt="Lesson 6: Internet Safety">
     <div class="lesson-text">
-      <h3>Lesson 6: Internet Safety</h3>
+      <h3 id="lesson6">Lesson 6: Internet Safety</h3>
       <p><strong>Objective:</strong> Understand online threats and learn how to stay safe online.</p>
       <p>We discussed risks such as phishing and created online safety posters.</p>
       <p><strong>Reflection:</strong> I learned how to protect my personal data and behave responsibly on the internet.</p>
@@ -85,7 +110,7 @@
   <div class="lesson ">
     <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=900&q=60" alt="Lesson 7: Types of Computers">
     <div class="lesson-text">
-      <h3>Lesson 7: Types of Computers</h3>
+      <h3 id="lesson7">Lesson 7: Types of Computers</h3>
       <p><strong>Objective:</strong> Compare desktops, laptops, tablets, and smartphones.</p>
       <p>We described the function and portability of each device type.</p>
       <p><strong>Reflection:</strong> I can identify which computer type suits different needs and situations.</p>
@@ -95,7 +120,7 @@
   <div class="lesson reverse">
     <img src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?auto=format&fit=crop&w=900&q=60" alt="Lesson 8: Computers in the Past">
     <div class="lesson-text">
-      <h3>Lesson 8: Computers in the Past</h3>
+      <h3 id="lesson8">Lesson 8: Computers in the Past</h3>
       <p><strong>Objective:</strong> Discuss how computers have evolved over time.</p>
       <p>We explored the history of computing and major milestones.</p>
       <p><strong>Reflection:</strong> I appreciate how technology has progressed and made life easier.</p>
@@ -105,7 +130,7 @@
   <div class="lesson ">
     <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=900&q=60" alt="Lesson 9: Questions in Past Tense">
     <div class="lesson-text">
-      <h3>Lesson 9: Questions in Past Tense</h3>
+      <h3 id="lesson9">Lesson 9: Questions in Past Tense</h3>
       <p><strong>Objective:</strong> Form and answer WH‑ questions in past tense.</p>
       <p>We practiced questions like 'What did you do yesterday?'</p>
       <p><strong>Reflection:</strong> Now I can ask and answer about past events clearly.</p>
@@ -115,7 +140,7 @@
   <div class="lesson reverse">
     <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=900&q=60" alt="Lesson 10: The Future and Robotics">
     <div class="lesson-text">
-      <h3>Lesson 10: The Future and Robotics</h3>
+      <h3 id="lesson10">Lesson 10: The Future and Robotics</h3>
       <p><strong>Objective:</strong> Explore how robotics may impact future life.</p>
       <p>We discussed benefits and challenges of using robots.</p>
       <p><strong>Reflection:</strong> I learned that robots will help in medicine, education, and daily tasks.</p>
@@ -125,7 +150,7 @@
   <div class="lesson ">
     <img src="https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=900&q=60" alt="Lesson 11: Environmental Solutions">
     <div class="lesson-text">
-      <h3>Lesson 11: Environmental Solutions</h3>
+      <h3 id="lesson11">Lesson 11: Environmental Solutions</h3>
       <p><strong>Objective:</strong> Propose solutions to environmental problems.</p>
       <p>We talked about recycling, pollution, and saving energy.</p>
       <p><strong>Reflection:</strong> I now value small actions to protect the planet.</p>
@@ -135,7 +160,7 @@
   <div class="lesson reverse">
     <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=900&q=60" alt="Lesson 12: Reflection and Review">
     <div class="lesson-text">
-      <h3>Lesson 12: Reflection and Review</h3>
+      <h3 id="lesson12">Lesson 12: Reflection and Review</h3>
       <p><strong>Objective:</strong> Review course contents and share reflections.</p>
       <p>We reviewed vocabulary, grammar, and all previous topics.</p>
       <p><strong>Reflection:</strong> This helped me connect all lessons and recognize my progress.</p>
@@ -145,7 +170,7 @@
 </section>
 
 <section class="conclusion">
-  <h2>Conclusion</h2>
+  <h2 id="conclusion">Conclusion</h2>
   <p>Throughout this course, I have strengthened my English communication skills and broadened my understanding of technology and its impact. This portfolio reflects my journey and growth over the semester.</p>
 </section>
 
